Adds error message

--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
           <input type="text" id= "breed" name="breed" placeholder="corgi" class="js-breed-input" required>
           <input type="submit" value="Get a picture!" class="submit-button">
         </form>
+        
+        <div id="js-error-message">
+
+        </div>
         <section class="results">
         </section>
     </div>
